fix: filter icon color not visible

--- a/packages/mantine-react-table/src/components/head/MRT_TableHeadCellFilterLabel.module.css
+++ b/packages/mantine-react-table/src/components/head/MRT_TableHeadCellFilterLabel.module.css
@@ -11,6 +11,6 @@
     var(--mantine-color-dark-3)
   );
   &[data-active] {
-    --ai-color: var(--mantine-primary-color-filled);
+    color: var(--mantine-primary-color-filled);
   }
 }
